tests/NormalTests/paczka1/fuzzy1/82346132.err
Error in line 7: woUS1 S782 70,3
Error in line 10: c0hLit S782 95,2
Error in line 22: S782 A324 11,9
Error in line 26: Aabc7 A324 59,9
Error in line 36: c0hLit A939 26,5
